--- a/main.html
+++ b/main.html
@@ -7,6 +7,11 @@
 </head>
 
 <body>
+	<h1>Time,Space and Complexity</h1>
+	<p>Time Complexity basically defines in how much time we solved 
+	this problem.There are three types of time complexity 1. Worst case Time Complexity 2. Base Case Time Complexity
+	3.Average Case Time Complexity.We used most efficient time complexity. </p>
+	<p><b>Space Complexity</b> defines how much space is used to solve this problem.It is denoted by O(n).</p>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
