--- a/main.html
+++ b/main.html
@@ -7,11 +7,10 @@
 </head>
 
 <body>
-	<h1>Time,Space and Complexity</h1>
-	<p>Time Complexity basically defines in how much time we solved 
-	this problem.There are three types of time complexity 1. Worst case Time Complexity 2. Base Case Time Complexity
-	3.Average Case Time Complexity.We used most efficient time complexity. </p>
-	<p><b>Space Complexity</b> defines how much space is used to solve this problem.It is denoted by O(n).</p>
+	<h1>Time and Space Complexity</h1>
+	<p>Time complexity basically defines in how much time we required solved 
+	this problem. As a programmer, its aur responsiblity to run the program in less time and makes our program efficient.</p>
+	<p><b>Space Complexity</b> defines how much space is occupied to solve this problem. If our program have n elements we must have to solve the question in O(n).</p>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
