--- a/main.html
+++ b/main.html
@@ -9,7 +9,9 @@
 <body>
 	<h1>Time and Space Complexity</h1>
 	<p>Time complexity basically defines in how much time we required solved 
-	this problem. As a programmer, its aur responsiblity to run the program in less time and makes our program efficient.</p>
+	this problem. As a programmer, its aur responsiblity 
+		to run the program in less time and makes our program
+		efficient.</p>
 	<p><b>Space Complexity</b> defines how much space is occupied to solve this problem. If our program have n elements we must have to solve the question in O(n).</p>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
